# pyibs

./: .pre-commit-config.yaml  LICENSE  README.md  ibs-simple.ipynb  ibs.ipynb  ibs_example.ipynb  ibs_simple.ipynb  ibs_v1.ipynb  ibs_ver1.ipynb  pyproject.toml
ibs_python/: README.md  ibs.py  ibs_example_1_basic_use.ipynb  ibs_example_2_parameter_estimation.ipynb  ibs_simple.py  ibs_simple_example.ipynb  psycho_gen.py  psycho_neg_logl.py  psycho_nll.py
ibs_python/examples/: ibs_example_1_basic_use.ipynb  ibs_example_2_parameter_estimation.ipynb  ibs_simple_example.ipynb
pyibs/: __init__.py  ibs.py  ibs_example_1_basic_use.ipynb  ibs_example_2_parameter_estimation.ipynb  ibs_simple_example.ipynb  psycho_generator.py
